--- a/jsf_f1blog_web/WebContent/WEB-INF/web.xml
+++ b/jsf_f1blog_web/WebContent/WEB-INF/web.xml
@@ -15,6 +15,49 @@
 		<param-name>primefaces.THEME</param-name>
 		<param-value>nova-light</param-value>
 	</context-param>
+	
+	<!-- FILTER -->
+	<filter>
+		<filter-name>SecurityFilter</filter-name>
+		<filter-class>javax.faces.simplesecurity.SecurityFilter</filter-class>
+		<init-param>
+			<param-name>noPermitionPage</param-name>
+			<param-value>/pages/login.xhtml</param-value>
+		</init-param>
+		<init-param>
+			<param-name>permissions</param-name>
+			<param-value>
+/javax.faces.resource : PUBLIC;
+/pages/public.xhtml : PUBLIC;
+/pages/register.xhtml : PUBLIC;
+/pages : admin;
+/pages/artykul1.xhtml : user, admin;
+/pages/artykul2.xhtml : user, admin;
+/pages/artykul3.xhtml : user, admin;
+/pages/artykuly.xhtml : user, admin;
+/pages/blog.xhtml : user, admin;
+/pages/marcysiox.xhtml : user;
+/pages/ustawienia.xhtml : user, admin;
+			</param-value>
+		</init-param>
+		<init-param>
+			<param-name>invalidateOnRemoteAddressChange</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<init-param>
+			<param-name>invalidateOnRemoteHostChange</param-name>
+			<param-value>false</param-value>
+		</init-param>
+		<init-param>
+			<param-name>invalidateOnRemotePortChange</param-name>
+			<param-value>false</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>SecurityFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -23,6 +66,14 @@
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
+	<session-config>
+		<session-timeout>1</session-timeout>
+		<tracking-mode>COOKIE</tracking-mode>
+	</session-config>
+	<mime-mapping>
+		<extension>ico</extension>
+		<mime-type>image/x-icon</mime-type>
+	</mime-mapping>
 	<welcome-file-list>
 		<welcome-file>/pages/public.xhtml</welcome-file>
 	</welcome-file-list>
